webmonitor/public/stylesheets/style.css
.main-header .logo-lg > img {
  max-height: 50px;
}

.main-header .logo-mini > img {
  max-height: 50px;
}

.imgs img{
  max-height: 50px;
  padding: 3px;
}

/* Show menu button */
#show-menu {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
}

#show-menu a {
  text-decoration: none;
}

#show-menu .sidebar-toggle {
  float: left;
  background-color: white;
  background-image: none;
  padding: 15px 15px;
  font-family: fontAwesome;
  color: #333;
}

#show-menu .sidebar-toggle:before {
  content: "\f0c9";
}

#show-menu .sidebar-toggle:focus,
#show-menu .sidebar-toggle:active {
  background: transparent;
}

#show-menu .sidebar-toggle .icon-bar {
  display: none;
}

.sidebar, .sidebar-menu, #terrama2-layerexplorer, .treeview, .treeview-menu, .treeview > span {
  background-color: inherit;
}

/* Full screen behavior */
.full_screen .content-wrapper {
  margin: 0;
}
.full_screen #show-menu{
  display: block;
  position: fixed;
  margin: 0;
  width: 42px;
  height: 50px;
  background-color: transparent;
  color: white;
  z-index: 99998;
}

.full_screen #show-menu .sidebar-toggle {
  color: #000;
}

.full_screen .main-sidebar {
  display: none;
}

.full_screen #nav{
  transform: translate(0px, -50px);
  -webkit-transform: translate(0px, -50px);
  -ms-transform: translate(0px, -50px);
  -o-transform: translate(0px, -50px);
}

.full_screen #terrama-header{
  position: absolute;
  width: 100%;
  transform: translate(0px, -50px);
  -webkit-transform: translate(0px, -50px);
  -ms-transform: translate(0px, -50px);
  -o-transform: translate(0px, -50px);
}

.full_screen .main-header .logo-lg {
  display: none;
}

.full_screen .main-header .logo-mini {
    display: block;
    margin-left: -15px;
    margin-right: -15px;
    font-size: 18px;
    position: absolute;
}

.full_screen .main-header .logo {
  width: 50px;
  position: absolute;
  min-height: 50px;
}

.full_screen .main-footer {
  margin: 0;
}

.full_screen .navbar{
  transition: max-height 0.5s, overflow 0s;
}

#nav{
  transition: transform .35s;
  -webkit-transition: transform .35s;
  -moz-transition: transform .35s;
  -o-transition: transform .35s;
}

#terrama-header{
  transition: transform .35s;
  -webkit-transition: transform .35s;
  -moz-transition: transform .35s;
  -o-transition: transform .35s;
}

#mma {
  max-width: 70px;
}

#mini-toggle {
  position: absolute;
  bottom: 0;
  color: white;
  z-index: 1;
  text-align: center;
  width: 100%;
  height: 50px;
  padding-top: 16px;
  background-color: #1e282c;
}

.sidebar-collapse #mini-toggle span {
  transform: rotate(180deg)
}

.footer-monitor {
  position: fixed;
  bottom: 0;
  width: 100%;
  height: 8px;
  background-color: #808080;
  border-top: solid 4px black; 
  z-index: 99999;
}

.main-footer {
  display: none !important;
}

#content {
  height: inherit;
  padding: 0;
}

.sidebar-menu > div {
  color: #b8c7ce;
}

#dynamic div, #static div, #analysis div, #template div, #custom div {
  margin-right: 5px;
  margin-left: 15px;
}

#dynamic .pull-right, #static .pull-right, #analysis .pull-right, #template .pull-right, #custom .pull-right {
  padding-right: 15px;
}

.sidebar-mini.sidebar-collapse #dynamic .pull-right,
.sidebar-mini.sidebar-collapse #static .pull-right,
.sidebar-mini.sidebar-collapse #analysis .pull-right,
.sidebar-mini.sidebar-collapse #template .pull-right,
.sidebar-mini.sidebar-collapse #custom .pull-right {
  padding-right: 0px;
}

.sidebar-mini.sidebar-collapse #dynamic {
  max-height: 40px;
}

.terrama2-layerexplorer-minus, .terrama2-layerexplorer-plus {
  background-image: none !important;
  float: none !important;
  width: 14px !important;
}


/*
 * Component: Sidebar Mini
 */
@media (min-width: 768px) {
  .sidebar-mini.sidebar-collapse .content-wrapper,
  .sidebar-mini.sidebar-collapse .right-side,
  .sidebar-mini.sidebar-collapse .main-footer {
    margin-left: 50px !important;
    z-index: 840;
  }
  .sidebar-mini.sidebar-collapse .main-sidebar {
    -webkit-transform: translate(0, 0);
    -ms-transform: translate(0, 0);
    -o-transform: translate(0, 0);
    transform: translate(0, 0);
    width: 50px !important;
    z-index: 850;
  }
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li {
    position: relative;
  }
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li > span {
    margin-right: 0;
  }
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li:hover {
    background-color: #1e282c;
  }
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li:hover > span > span:not(.pull-right),
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li:hover > .treeview-menu {
    display: block !important;
    position: absolute;
    width: 180px;
    left: 50px;
  }
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li:hover > span > span {
    top: 0;
    padding: 10px 0px 10px 20px;
    background-color: inherit;
  }
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li:hover > span > span > i {
    margin-left: -5px;
  }
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li:hover > span > .pull-right-container {
    top: 0 !important;
    height: 40px !important;
    float: right;
    width: auto!important;
    left: 200px!important;
  }
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li:hover > span > .pull-right-container > .label:not(:first-of-type) {
    display: none;
  }
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li:hover .treeview-menu {
    top: 40px;
    margin-left: 0;
  }
  .sidebar-mini.sidebar-collapse .main-sidebar .user-panel > .info,
  .sidebar-mini.sidebar-collapse .sidebar-form,
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li > span > span,
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li .treeview-menu,
  .sidebar-mini.sidebar-collapse .sidebar-menu > #terrama2-layerexplorer > li > span > .pull-right,
  .sidebar-mini.sidebar-collapse .sidebar-menu li.header {
    display: none !important;
    -webkit-transform: translateZ(0);
  }
  .sidebar-mini.sidebar-collapse .main-header .logo {
    width: 50px;
  }
  .sidebar-mini.sidebar-collapse .main-header .logo > .logo-mini {
    display: block;
    margin-left: -15px;
    margin-right: -15px;
    font-size: 18px;
  }
  .sidebar-mini.sidebar-collapse .main-header .logo > .logo-lg {
    display: none;
  }
  .sidebar-mini.sidebar-collapse .main-header .navbar {
    margin-left: 50px;
  }
  .sidebar-mini.sidebar-collapse form {
    display: none;
  }
}


#wmsUri {
  width: 168px;
  margin-left: 5px;
}

#layersModalBody {
  max-height: 370px;
  /*overflow: overlay;*/
  overflow-y: auto;
}

#layersModalBody > ul > li > span {
  margin-left: 5px;
}

#layersModalBody > ul {
  list-style: none;
}

#terrama2Alert {
  z-index: 99999;
  position: fixed;
  top: 60px;
  left: 50%;
}

#terrama2-sortlayers{
  cursor: move;
}

#terrama2-sortlayers ul {
  list-style: none;
  padding-left: 10px;
}

.terrama2-datepicker-icon {
  margin-right: 15px;
  float: right;
  cursor: pointer;
}

.slider-content {
  /*position: absolute;*/
  background-color: white;
  width: 200px;
  /*bottom: 40px;*/
  height: 55px;
  padding: 6px;
  z-index: 2000;
  opacity: 0.9;
  border-radius: 10px;
}

.slider-content > div {
  margin-left: 15px;
}

/*
  @description It performs a text truncate in string. You should specify width limit using style or another class.
  In Layers Explorer Section, the recommended width is 140px;

  @example
  <span class=".terrama2-text-truncate" style="width: 100px;">This text will be truncated</span>

  This text ...
*/
.terrama2-text-truncate {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.ui-sortable .terrama2-layerexplorer-checkbox-span {
  width: 140px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.unsortable .terrama2-datepicker-icon {
  margin-top: -30px !important;
}

/**
 * It handles Mozila FireFox CSS specific styles
 */
@-moz-document url-prefix() {
    /*
      It fixes the position of dropdown icon on layer explorer. Without it, the icon will overflow to the next li item
    */
    .ui-sortable .group-name span i {
      margin-top: -16px !important;
    }

    .terrama2-layerexplorer-checkbox-span {
      text-indent: 8px !important;
    }

    .slider-content button[class~="close-slider"]{
      margin-top: -25px !important;
    }
}

